[metadata]
name = extract_wa_media
version = 1.0
description = A quick tool that makes it easy to extract all media from your iOS whatsapp database.
    This can be useful for merging media from an old backup into your current device.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/uryyakir/extract-wa-media
author = Uri Yakir
author_email = uryyakir@gmail.com

[options]
packages = find:
include_package_data = True
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    extract_wa_media=extract_wa_media.main:main

[mypy]
exclude = venv/
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[flake8]
exclude = venv\
ignore = E501